fixed speed of swiper, mobil-menu styles and footer styles on mobile

--- a/css/b-partners.css
+++ b/css/b-partners.css
@@ -40,10 +40,4 @@
     flex-wrap: wrap;
   }
 
-  .block-partners__image {
-    width: 20%;
-  }
-
-
-
 }
