--- a/css/b-reviews.css
+++ b/css/b-reviews.css
@@ -73,7 +73,7 @@
     text-align: center;
   }
   .block-reviews__wrap .block-reviews__item:last-child {
-    margin-bottom: 10px;
+    margin-bottom: 50px;
   }
 
 }
