--- a/css/base.css
+++ b/css/base.css
@@ -21,7 +21,9 @@
   --txt-c-light: var(--c-light);
   --txt-c-light-orange: var(--c-light-orange);
 }
-
+body {
+  /* overflow: hidden; */
+}
 html,
 body,
 main {
@@ -140,6 +142,9 @@ ul {
   text-align: center;
   /* margin: 2vw ; */
 }
+.mobile-menu-container {
+  display: none;
+}
 
 
 
@@ -148,6 +153,9 @@ ul {
   .wrapper {
     max-width: 1020px;
     /* margin: 2vw auto; */
+  }
+  .mobile-menu-container {
+    display: none;
   }
 }
 /* Tablet */
@@ -161,7 +169,9 @@ ul {
   .accent-btn--big-white {
     justify-content: center;
   }
-
+  .mobile-menu-container {
+    display: none;
+  }
 
 }
 
@@ -169,7 +179,6 @@ ul {
 @media all and (max-width: 767px) {
   .wrapper {
     max-width: 310px;
-    /* min-width: 300px; */
     width: inherit;
     padding: 0 20px;
   }
@@ -187,24 +196,24 @@ ul {
   }
 
   /* Mobile Menu */
+.mobile-menu-container {
+  display: block;
+  
+}
 .mobile-menu {
   list-style-type: none;
   display: none;
   position: absolute;
   background: #fff;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   right: 0;
+  /* bottom: 0; */
 }
 
 .active {
   display: block;
 }
-.
-  font-weight: bold;
-  font-size: 56px;
-  line-height: 59px;
 
-}
 
 
