--- a/css/footer.css
+++ b/css/footer.css
@@ -116,13 +116,16 @@
     justify-content: space-around;
     margin-top: 40px;
   }
+  .footer__right-side {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
   .footer__col .logo {
     margin-bottom: 15px;
   }
   .footer__col {
     margin: 20px;
-    /* justify-self: stretch; */
-
   }
   .footer__wrap .footer__col:first-child {
     flex-grow: 3;
@@ -134,6 +137,9 @@
   .footer__wrap .footer__col:last-child{
     margin-top: 0;
     min-width: 200px;
+  }
+  .footer__bottom {
+    flex-direction: column-reverse;
   }
   
 
