--- a/css/header.css
+++ b/css/header.css
@@ -155,12 +155,31 @@
     font-weight: bold;
     font-size: 30px;
     line-height: 40px;
-    padding: 30px 0;
+    padding: 20px 0;
 
   }
   .mobile-menu__link {
     text-decoration: none;
     color: var(--txt-c-dark);
+  }
+  .mobile-menu__link:hover {
+    color: var(--c-blue);
+  }
+  .mobile-menu__contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .mobile-menu__link {
+    margin-bottom: 30px;
+  }
+  .mobile-menu__contacts .mobile-menu__link {
+    color: var(--c-light-orange);
+
+  }
+  .mobile-menu__contacts .mobile-menu__link:hover {
+    color: var(--c-green);
+
   }
 }
 
