--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
 .swiper-container {
   width: 1180px;
-  height: 54px;
+  height: 50px;
 }
